moving dockerfile out, and checking out the materials repo in the container:

--- a/vericrypt2021/Dockerfile
+++ b/vericrypt2021/Dockerfile
@@ -13,23 +13,29 @@ RUN echo "vericrypt ALL=(ALL:ALL) NOPASSWD:ALL" >> /etc/sudoers
 USER vericrypt
 WORKDIR /home/vericrypt
 
+# Some commonly used tools
 RUN sudo apt install -y software-properties-common
 RUN sudo apt -qq update
 
 RUN sudo apt install -y wget
 RUN sudo apt -qq update
 
+# EverParse release, comes with F*, Kremlin too
 RUN wget https://github.com/project-everest/everparse/releases/download/v2021.12.10/everparse_v2021.12.10_Linux_x86_64.tar.gz
 
 RUN tar -xvzf everparse_v2021.12.10_Linux_x86_64.tar.gz
 
 RUN rm everparse_v2021.12.10_Linux_x86_64.tar.gz
 
+# Set up F* environment
+
 ENV FSTAR_HOME="/home/vericrypt/everparse"
 ENV KREMLIN_HOME="/home/vericrypt/everparse"
 ENV QD_HOME="/home/vericrypt/everparse"
 ENV PATH="/home/vericrypt/everparse/bin:${PATH}"
 ENV LD_LIBRARY_PATH="/home/vericrypt/everparse/bin:${LD_LIBRARY_PATH}"
+
+# emacs editor and F* plugin
 
 RUN sudo apt install -y emacs libglu1-mesa xfonts-terminus fonts-symbola
 
@@ -44,6 +50,8 @@ RUN emacs --batch \
 
 COPY --chown=vericrypt:vericrypt .emacs /home/vericrypt/.emacs
 
+# DY*
+
 RUN wget -O dystar.tar.gz https://github.com/REPROSEC/dolev-yao-star/archive/refs/tags/vericrypt21.tar.gz
 
 RUN tar -xvzf dystar.tar.gz
@@ -56,7 +64,7 @@ ENV DY_HOME="/home/vericrypt/dystar"
 
 RUN sudo apt install make
 
-#For ProVerif
+# For ProVerif
 
 RUN sudo apt install -y opam ocaml graphviz libgtk2.0-dev libexpat1-dev m4
 RUN opam init --disable-sandboxing -y
@@ -78,3 +86,6 @@ ENV PATH="/home/vericrypt/proverif:${PATH}"
 WORKDIR /home/vericrypt
 RUN rm proverif2.04.tar.gz proverifdoc2.04.tar.gz
 
+# VeriCrypt materials repo
+
+RUN git clone https://github.com/vericrypt-workshop/vericrypt-materials.git
